{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 257,
  "lineage": "6e19de28-2f7e-e0ee-519e-9777d4d1d79f",
  "resources": [
    {
      "module": "module.simple-bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "module.simple-bastion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0aa81a5fab62093",
            "arn": "arn:aws:ec2:eu-west-1:781487097529:instance/i-0dc5fb2e89dbcb059",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc5fb2e89dbcb059",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_pubkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00a7ca959fb98415d",
            "private_dns": "ip-10-0-0-26.eu-west-1.compute.internal",
            "private_ip": "10.0.0.26",
            "public_ip": "34.244.72.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d58f3fc82a8e6452",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071a84653feac65ec",
            "tags": {
              "Name": "bastion RE",
              "owner": "richarde"
            },
            "tags_all": {
              "Name": "bastion RE",
              "owner": "richarde"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0323086e613f42036"
            ]
          },
          "dependencies": [
            "data.aws_ami.latest_ubuntu",
            "module.simple-bastion.aws_key_pair.auto_ssh_pubkey",
            "module.simple-bastion.aws_key_pair.ssh_pubkey",
            "module.simple-bastion.aws_security_group.bastion",
            "module.simple-bastion.data.aws_ami.latest_al2022",
            "module.simple-bastion.tls_private_key.auto_ssh_key",
            "module.simple-vpc.aws_subnet.public",
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "module.simple-bastion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781487097529:security-group/sg-0323086e613f42036",
            "description": "Main security group, allows all outgoing",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow outbound all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0323086e613f42036",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow inbound ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion",
            "name_prefix": "",
            "owner_id": "781487097529",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion RE",
              "owner": "richarde"
            },
            "tags_all": {
              "Name": "bastion RE",
              "owner": "richarde"
            },
            "timeouts": null,
            "vpc_id": "vpc-0705f116e3d1c9418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "module.simple-bastion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound all",
            "from_port": 0,
            "id": "sgrule-2882684991",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0323086e613f42036",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-bastion.aws_security_group.bastion",
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_ssh",
      "provider": "module.simple-bastion.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow inbound ssh",
            "from_port": 22,
            "id": "sgrule-1044476130",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0323086e613f42036",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-bastion.aws_security_group.bastion",
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vault-cluster",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vault-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0aa81a5fab62093",
            "arn": "arn:aws:ec2:eu-west-1:781487097529:instance/i-00b9c5361cb8dea15",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b9c5361cb8dea15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_pubkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c1340208b5772493",
            "private_dns": "ip-10-0-0-147.eu-west-1.compute.internal",
            "private_ip": "10.0.0.147",
            "public_ip": "54.195.143.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b19f547c0ee6e43",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071a84653feac65ec",
            "tags": {
              "Name": "vault RE",
              "owner": "richarde"
            },
            "tags_all": {
              "Name": "vault RE",
              "owner": "richarde"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0242e3cb11786fa84"
            ]
          },
          "dependencies": [
            "data.aws_ami.latest_ubuntu",
            "module.simple-bastion.aws_key_pair.auto_ssh_pubkey",
            "module.simple-bastion.aws_key_pair.ssh_pubkey",
            "module.simple-vault-cluster.aws_security_group.vault-cluster",
            "module.simple-vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vault-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vault-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781487097529:security-group/sg-0242e3cb11786fa84",
            "description": "Security group to allow public inbound traffic to Vault on 8200",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow outbound all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0242e3cb11786fa84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow inbound 8200",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8200
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allow inbound ssh from subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Vault",
            "name_prefix": "",
            "owner_id": "781487097529",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vault RE",
              "owner": "richarde"
            },
            "tags_all": {
              "Name": "vault RE",
              "owner": "richarde"
            },
            "timeouts": null,
            "vpc_id": "vpc-0705f116e3d1c9418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vault-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound all",
            "from_port": 0,
            "id": "sgrule-1662684565",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0242e3cb11786fa84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-vault-cluster.aws_security_group.vault-cluster",
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vault-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow inbound 8200",
            "from_port": 8200,
            "id": "sgrule-1320136606",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0242e3cb11786fa84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8200,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-vault-cluster.aws_security_group.vault-cluster",
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vault-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "allow inbound ssh from subnet",
            "from_port": 22,
            "id": "sgrule-158753128",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0242e3cb11786fa84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-vault-cluster.aws_security_group.vault-cluster",
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "module.simple-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781487097529:internet-gateway/igw-00df7ac71dda5d543",
            "id": "igw-00df7ac71dda5d543",
            "owner_id": "781487097529",
            "tags": {
              "Name": "vpc RE",
              "owner": "richarde"
            },
            "tags_all": {
              "Name": "vpc RE",
              "owner": "richarde"
            },
            "vpc_id": "vpc-0705f116e3d1c9418"
          },
          "dependencies": [
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "egress_all",
      "provider": "module.simple-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00df7ac71dda5d543",
            "id": "r-rtb-013978a75811218c31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013978a75811218c3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-vpc.aws_internet_gateway.main",
            "module.simple-vpc.aws_route_table.main",
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "module.simple-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781487097529:route-table/rtb-013978a75811218c3",
            "id": "rtb-013978a75811218c3",
            "owner_id": "781487097529",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00df7ac71dda5d543",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc RE",
              "owner": "richarde"
            },
            "tags_all": {
              "Name": "vpc RE",
              "owner": "richarde"
            },
            "timeouts": null,
            "vpc_id": "vpc-0705f116e3d1c9418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "egress_all",
      "provider": "module.simple-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0324d23879b0dfd40",
            "route_table_id": "rtb-013978a75811218c3",
            "subnet_id": "subnet-071a84653feac65ec"
          },
          "dependencies": [
            "module.simple-vpc.aws_route_table.main",
            "module.simple-vpc.aws_subnet.public",
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc",
      "provider": "module.simple-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781487097529:security-group/sg-0d64429fb48330a00",
            "description": "Main security group, allows all outgoing",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d64429fb48330a00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow inbound ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC",
            "name_prefix": "",
            "owner_id": "781487097529",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc RE",
              "owner": "richarde"
            },
            "tags_all": {
              "Name": "vpc RE",
              "owner": "richarde"
            },
            "timeouts": null,
            "vpc_id": "vpc-0705f116e3d1c9418"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "module.simple-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outbound",
            "from_port": 0,
            "id": "sgrule-2339011565",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d64429fb48330a00",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-vpc.aws_security_group.vpc",
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_ssh",
      "provider": "module.simple-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow inbound ssh",
            "from_port": 22,
            "id": "sgrule-3567910992",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d64429fb48330a00",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple-vpc.aws_security_group.vpc",
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.simple-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781487097529:subnet/subnet-0d55cae85ba4b4d9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d55cae85ba4b4d9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "781487097529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc RE",
              "owner": "richarde"
            },
            "tags_all": {
              "Name": "vpc RE",
              "owner": "richarde"
            },
            "vpc_id": "vpc-0705f116e3d1c9418"
          },
          "dependencies": [
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.simple-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781487097529:subnet/subnet-071a84653feac65ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071a84653feac65ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781487097529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc RE",
              "owner": "richarde"
            },
            "tags_all": {
              "Name": "vpc RE",
              "owner": "richarde"
            },
            "vpc_id": "vpc-0705f116e3d1c9418"
          },
          "dependencies": [
            "module.simple-vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.simple-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.simple-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781487097529:vpc/vpc-0705f116e3d1c9418",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08eb3236281690c0e",
            "default_route_table_id": "rtb-0866860fa2be37eda",
            "default_security_group_id": "sg-0c3a3067a0fca3e9e",
            "dhcp_options_id": "dopt-73dd4b15",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0705f116e3d1c9418",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0866860fa2be37eda",
            "owner_id": "781487097529",
            "tags": {
              "Name": "vpc RE",
              "owner": "richarde"
            },
            "tags_all": {
              "Name": "vpc RE",
              "owner": "richarde"
            }
          }
        }
      ]
    }
  ]
}